[package]
name = "rust-prices-parser"
version = "0.1.0"
authors = ["disgusting-dev <fabledva3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
dotenv = "0.15"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
clap = "2.33.3"
csv = "1.1.6"
log4rs = "1.0.0"
log = "0.4.14"
lazy_static = "1.4.0"
google-sheets4 = "*"
hyper = "0.14.14"
hyper-rustls = "0.22.1"
yup-oauth2 = "5.0.0"
chrono = "0.4.19"
